# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "example"
version = "0.1.0"
authors = ["Pinco"]
categories = ["cryptography"]
documentation = "https://docs.rs/example"
edition = "2021"
homepage = "https://arkworks.rs"
include = ["Cargo.toml", "src", "README.md", "LICENSE"]
keywords = ["cryptography", "finite-fields", "elliptic-curves"]
license = "MIT"
repository = "privacy-scaling-explorations/zk-kit.rust"
description = "Just an example."

[dependencies]
