[package]
name = "zk-kit-lean-imt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Lean Incremental Merkle Tree"

[lib]
name = "lean_imt"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
rand = "0.9"
serde_json = "1"

[features]
default = []
serde = ["dep:serde"]
stateless = []
