[package]
name = "zk-kit-smt"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Sparse Merkle Tree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.6"
